--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -53,16 +53,11 @@ color:white;
 </tr>
       <tr id="inputRow">
 
-        <td>
+        <td class="inputTd"></td>
+        <td class="inputTd"></td>
+        <td class="inputTd"></td>
+        <td class="inputTd"></td>
 
-          
-        </td>
-        <td>
-        </td>
-        <td>
-        </td>
-        <td>
-        </td>
       </tr>
     </table>
 
@@ -74,7 +69,7 @@ color:white;
     
   </div>
 <script>
-("#inputRow td").each(function(){
+(".inputTd").each(function(){
   this.append("input")
 });
 
