--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <script src="https://raw.githubusercontent.com/realjunderwood/realjunderwood.github.io/main/jquery-3.6.0.min.js"></script>
+  <script src="jquery-3.6.0.min.js"></script>
 <style>
   @font-face {
     font-family: skyFall;
