--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -26,11 +26,12 @@ text-align:center;
   }
 
   #generate {
-    padding:30px;
+    padding:12px;
      background: rgb(255,145,0)
     font-family:skyFall !important;
         border-radius:12px;
 color:white;
+    border:2px solid black;
   }
 </style>
 
