--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -54,10 +54,10 @@ color:white;
 </tr>
       <tr id="inputRow">
 
-        <td class="inputTd"></td>
-        <td class="inputTd"></td>
-        <td class="inputTd"></td>
-        <td class="inputTd"></td>
+        <td class="inputTd blueTd"></td>
+        <td class="inputTd redTd"></td>
+        <td class="inputTd bsTd"></td>
+        <td class="inputTd AssTd"></td>
 
       </tr>
     </table>
