--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -70,7 +70,7 @@ color:white;
     
   </div>
 <script>
-(".inputTd").each(function(){
+$(".inputTd").each(function(){
   this.append("input")
 });
 
