--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -30,7 +30,7 @@ text-align:center;
      background: rgb(255,145,0)
     font-family:skyFall !important;
         border-radius:12px;
-color:white;
+color:black;;
     border:2px solid black;
   }
 </style>
