--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -8,8 +8,8 @@
 }
   body {
 font-family:skyFall;
-    margin-left:250px;
-    margin-right:250px;
+    margin-left:175px;
+    margin-right:175px;
     background:#d5d5d5;
   }
 
@@ -20,6 +20,7 @@ font-family:skyFall;
 background: radial-gradient(circle, rgba(255,145,0,1) 0%, rgba(212,65,41,1) 47%, rgba(177,0,75,1) 100%); 
     padding:20px;
     border-radius:12px;
+    margin-bottom:25px;
   }
   #contentDiv {
 text-align:center;
@@ -33,6 +34,10 @@ text-align:center;
 color:black;;
     border:2px solid black;
   }
+
+  #formTable {
+    width:100%;
+  }
 </style>
 
   
@@ -44,7 +49,7 @@ color:black;;
   <h1>Codenames Cluefinder</h1>
 </div>
   <div id="contentDiv">
-    <table>
+    <table id="formTable">
 <tr>
   <th>Blue words</th>
   <th>Red words</th>
