--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -77,7 +77,7 @@ color:black;;
 <script>
 $(".inputTd").each(function(){
  for (let i = 0; i < 8; i++) {
-    this.append("<input type='text'>");
+    this.append( $("input") );
  }
 });
 
