--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -75,9 +75,12 @@ color:black;;
     
   </div>
 <script>
+
+  var input = $('<input>');
+  
 $(".inputTd").each(function(){
  for (let i = 0; i < 8; i++) {
-    this.append( $("input") );
+    this.append(input) );
  }
 });
 
