--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ margin-right: 6px;
 						<a href="/yost/index.html">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
 						<span class="smoldate">3/13/2022</span>
 					</li>
+		<li><a href="https://devpost.com/software/shoulders-of-giants">Shoulders of Giants (Uncommon Hacks 2021 best hardware hack)</a></li>
 	</ul>
 <hr>
 
