--- a/index.html
+++ b/index.html
@@ -93,7 +93,12 @@ margin-right: 6px;
 	  <hr>
     <h2>Recent work</h2>
 	<ul>
-<li><a href="https://portfolio.jamesunderwood.net/">Ohio Student Journalist of the Year portfolio</a></li>
+<li><a href="https://portfolio.jamesunderwood.net/">Ohio Student Journalist of the Year portfolio</a>
+<ul>
+<li><a href="https://www.arlingtonian.com/archives/author/jamesu">All student journalism</a></li>
+</ul>
+
+</li>
 		<li><a href="/codenames.html">Finding Codenames Clues using NLP</a></li>
 <li>
 						<a href="/yost/index.html">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
