--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@ margin-right: 6px;
 
 				<li><a href="https://instagram.com/junderwooood">Instagram</a></li>
 				<li><a href="https://letterboxd.com/jayunder/">Letterboxd</a></li>
+		  		<li><a href="https://www.linkedin.com/in/jamescunderwood/">LinkedIn</a></li>
 		  		<li><a href="https://open.spotify.com/user/73avhoythh23c4thasadw72tz?si=b3a0f79c828946b5">Spotify</a></li>
 
 
