--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@ I8,      ,8'
 		  <img src="/assets/8831/jund8831.png">
 		  <p class="smallp"><small><a href="/indexolder.html">view old site</a> / <a href="/indexold.html">view older site</a></small></p>
 		  <p class="smallp"><small>Franklin County, Ohio</small></p>
-		 <p class="smallp"><small>&copy; 2023</small></p>
+		<!-- <p class="smallp"><small>&copy; 2023</small></p>-->
+		  <p class="smallp"><small><a href="https://web.ics.purdue.edu/~drkelly/DFWKenyonAddress2005.pdf">&ldquot;This is water.&rdquot;</a></small></p>
 		  
 	  </div>
   </div>
@@ -196,7 +197,7 @@ I8,      ,8'
 
 
 
-emailmearray = ["a love letter", "a Pinterest board", "a pun", "a riddle", "an infographic", "a personal question", "a video game you like", "a call to action", "misinformation", "lofi beats to relax/study to", "your favorite human right", "a white paper", "a scavenger hunt", "a wry tweet", "a crossword", "a spurious correlation", "your theory of everything", "a factsheet", "art", "a map", "feedback", "an apology", "an anecdote", "something to laugh at", "a sick typeface", "your <i>raison d'être</i>", "a painting", "a press inquiry", "spam", "coupons", "advice", "a comic", "something to read", "a survey", "a thought experiment", "a job offer", "a catchy tune", "sheet music", "your favorite film", "a digital postcard", "fan mail", "hate mail", "a summons", "a well-written court opinion", "a tasty recipe", "a Wikipedia article", "a theorem", "a math problem", "your manifesto", "your screenplay", "small talk", "a surprising etymology", "good news", "bad news", "a cease and desist notice", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "your hottest take", "a podcast rec", "a zine", "a picture of the sunset", "a travelogue", "a short story", "your website"]
+emailmearray = ["a love letter", "a Pinterest board", "a pun", "a stirring speech", "a riddle", "an infographic", "a personal question", "a video game you like", "a call to action", "misinformation", "lofi beats to relax/study to", "your favorite human right", "a white paper", "a scavenger hunt", "a wry tweet", "a crossword", "a spurious correlation", "your theory of everything", "a factsheet", "art", "a map", "feedback", "an apology", "an anecdote", "something to laugh at", "a sick typeface", "your <i>raison d'être</i>", "a painting", "a press inquiry", "spam", "coupons", "advice", "a comic", "something to read", "a survey", "a thought experiment", "a job offer", "a catchy tune", "sheet music", "your favorite film", "a digital postcard", "fan mail", "hate mail", "a summons", "a well-written court opinion", "a tasty recipe", "a Wikipedia article", "a theorem", "a math problem", "your manifesto", "your screenplay", "small talk", "a surprising etymology", "good news", "bad news", "a cease and desist notice", "a volunteer opportunity", "a compliment", "an invitation to a function", "a poem", "trivia", "an inspiring quote", "a trite platitude", "a photograph of your favorite insect", "your hottest take", "a podcast rec", "a zine", "a picture of the sunset", "a travelogue", "a short story", "your website"]
 shuffleArray(emailmearray);
   
 cureindex = 0;
