--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ margin-right: 6px;
 
 	  <hr>
   <h2>Email me <span id="emailmea">something to read</span></h2>
-<p>I love a good email (<a href="https://en.wikipedia.org/wiki/BlitzMail">called a &ldquo;blitz&rdquo; in Dartmouth lingo</a>). You can get touch in at <code>jcunderwood [at] protonmail [dot] com</code>.</p>
+<p>I love a good email. You can get touch in at <code>jcunderwood [at] protonmail [dot] com</code>.</p>
   
 <hr>
 	  <h2>Follow me elsewhere</h2>
