--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ I8,      ,8'
 		  <p class="smallp"><small><a href="/indexold.html">view old site</a> / <a href="/indexolder.html">view older site</a></small></p>
 		  <p class="smallp"><small>Franklin County, Ohio, USA</small></p>
 		<!-- <p class="smallp"><small>&copy; 2023</small></p>-->
-		  <p class="smallp" id="water"><small><a href="https://web.ics.purdue.edu/~drkelly/DFWKenyonAddress2005.pdf">&ldquo;This is water.&rdquo;</a></small></p>
+		  <p class="smallp" id="water"><small><a target="_BLANK" href="https://web.ics.purdue.edu/~drkelly/DFWKenyonAddress2005.pdf">&ldquo;This is water.&rdquo;</a></small></p>
 		  
 	  </div>
   </div>
