--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ hr {
     body {
       font-family: "Helvetica";
 	        min-height: 100vh;
+	    background:beige;
     }
     #hpageWelcome {
 font-size:4em;
@@ -78,7 +79,11 @@ color:black !important;
 	  #water {
 font-size:0.8em;
 	  }
-	  
+	  #framecont {
+width:100%;
+height:100%;
+margin:40px;
+	  }
   </style>
 
   
@@ -86,7 +91,7 @@ font-size:0.8em;
 <body>
 
     <script src="jquery-3.6.0.min.js"></script>
-	
+	<div id="framecont">
   <div id="maincontainer">
 <h1 id="hpageWelcome">Welcome!</h1>
     <h2 id="intrograph" style="font-weight:300">I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, AI, law, linguistics, and journalism.</h2>
@@ -191,7 +196,7 @@ I8,      ,8'
 		  
 	  </div>
   </div>
-
+  </div>
 <script>
   function shuffleArray(array) {
     for (let i = array.length - 1; i > 0; i--) {
