--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ font-size:0.8em;
 width:100%;
 height:100%;
 margin:40px;
+		  background:white;
+		  padding-top:15px;
+		  border-radius:25px;
 	  }
   </style>
 
