--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ color:black !important;
 font-size:0.8em;
 	  }
 	  #framecont {
-width:100%;
+width:90%%;
 height:100%;
 margin:40px;
 		  background:white;
