--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ height:100%;
 margin:40px;
 		  background:white;
 		  padding-top:15px;
+		  padding-bottom:15px;
 		  border-radius:25px;
 	  }
   </style>
@@ -193,7 +194,7 @@ I8,      ,8'
 	  </div>
 		  <img src="/assets/8831/jund8831.png">
 		  <p class="smallp"><small><a href="/indexold.html">view old site</a> / <a href="/indexolder.html">view older site</a></small></p>
-		  <p class="smallp"><small>Franklin County, Ohio, USA</small></p>
+		  <p class="smallp"><small>Made with ♡ in Franklin County, Ohio, USA</small></p>
 		<!-- <p class="smallp"><small>&copy; 2023</small></p>-->
 		  <p class="smallp" id="water"><small><a target="_BLANK" href="https://web.ics.purdue.edu/~drkelly/DFWKenyonAddress2005.pdf">&ldquo;This is water.&rdquo;</a></small></p>
 		  
