--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ margin:40px;
 		  padding-top:15px;
 		  padding-bottom:15px;
 		  border-radius:25px;
+		  border:1px solid black;
 	  }
   </style>
 
