--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ I8,      ,8'
     							<span id="dotNet" style="font-size:24px;font-weight:600;color:black;display:inline;position:absolute;vertical-align:top;padding-top:35px;" class="comicSans">.net</span>
 	  </div>
 		  <img src="/assets/8831/jund8831.png">
-		  <p class="smallp"><small><a href="/indexold.html">view old site</a> / <a href="/indexolder.html">view older site</a></small></p>
+		  <p class="smallp"><small><a href="/indexold.html">view old site</a></small></p>
 		  <p class="smallp"><small>Made with ♡ in Franklin County, Ohio, USA</small></p>
 		<!-- <p class="smallp"><small>&copy; 2023</small></p>-->
 		  <p class="smallp" id="water"><small><a target="_BLANK" href="https://web.ics.purdue.edu/~drkelly/DFWKenyonAddress2005.pdf">&ldquo;This is water.&rdquo;</a></small></p>
