--- a/index.html
+++ b/index.html
@@ -133,12 +133,13 @@ margin:40px;
 </div>
   </div>-->
 
-
+<details>
+	<summary>Show guestbook entries</summary>
 <div id="gbContainer" style="height: 200px;overflow: scroll;background: #eeeeee;width: 100%;">
 
 </div>
 
-	  
+	</details>  
 	  
 
 
