--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ margin:40px;
 	  <hr>
     <h2>Recent work</h2>
 	<ul>
+		<li><a href="https://github.com/OSU-Bee-Lab/BuzzDetect">BuzzDetect (OSU Bee Lab)</a></li>
 <li><a href="https://portfolio.jamesunderwood.net/">Ohio Student Journalist of the Year portfolio</a>
 <ul>
 <li><a href="https://www.arlingtonian.com/archives/author/jamesu">All student journalism</a></li>
@@ -119,6 +120,7 @@ margin:40px;
 						<a href="/yost/index.html">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
 						<span class="smoldate">3/13/2022</span>
 					</li>
+		<li><a href="/autoannouncer">AutoAnnouncer</a></li>
 		<li><a href="https://devpost.com/software/shoulders-of-giants">Shoulders of Giants (Uncommon Hacks 2021 best hardware hack)</a></li>
 	</ul>
 <hr>
