--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ margin:40px;
 	<div id="framecont">
   <div id="maincontainer">
 <h1 id="hpageWelcome">Welcome! :]</h1>
-    <h2 id="intrograph" style="font-weight:300">I'm a high school senior and a rising freshman at Dartmouth College. Among other things, I'm interested in computer science, public affairs, AI, law, linguistics, and journalism.</h2>
+    <h2 id="intrograph" style="font-weight:300">I'm a freshman at Dartmouth College studying computer science. I'm also interested in cognitive science, public affairs, law, linguistics, and journalism.</h2>
 <!--<figure>
   <img src="rollup.JPG" width="128px">
   <figcaption>&ShortUpArrow; Eating a fruit roll-up</figcaption>
@@ -108,8 +108,12 @@ margin:40px;
 	  <hr>
     <h2>Recent work</h2>
 	<ul>
-		<li><a href="https://github.com/OSU-Bee-Lab/BuzzDetect">BuzzDetect (OSU Bee Lab)</a></li>
+		<li><a href="https://github.com/OSU-Bee-Lab/BuzzDetect">BuzzDetect (OSU Bee Lab)</a>
+		<span class="smoldate">Summer 2023</span>
+		</li>
 <li><a href="https://portfolio.jamesunderwood.net/">Ohio Student Journalist of the Year portfolio</a>
+			<span class="smoldate">Winter 2023</span>
+
 <ul>
 <li><a href="https://www.arlingtonian.com/archives/author/jamesu">All student journalism</a></li>
 </ul>
@@ -120,7 +124,9 @@ margin:40px;
 						<a href="/yost/index.html">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
 						<span class="smoldate">3/13/2022</span>
 					</li>
-		<li><a href="/autoannouncer">AutoAnnouncer</a></li>
+		<li><a href="/autoannouncer">AutoAnnouncer</a>
+		<span class="smoldate">Summer 2022</span>
+		</li>
 		<li><a href="https://devpost.com/software/shoulders-of-giants">Shoulders of Giants (Uncommon Hacks 2021 best hardware hack)</a></li>
 	</ul>
 <hr>
