--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@ margin:40px;
 		<span class="smoldate">Summer 2022</span>
 		</li>
 		<li><a href="https://devpost.com/software/shoulders-of-giants">Shoulders of Giants (Uncommon Hacks 2021 best hardware hack)</a></li>
+								<span class="smoldate">4/4/2021</span>
+
 	</ul>
 <hr>
 
