--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ margin:40px;
 		<span class="smoldate">Summer 2023</span>
 		</li>
 <li><a href="https://portfolio.jamesunderwood.net/">Ohio Student Journalist of the Year portfolio</a>
-			<span class="smoldate">Winter 2023</span>
+			<span class="smoldate">2/10/2023</span>
 
 <ul>
 <li><a href="https://www.arlingtonian.com/archives/author/jamesu">All student journalism</a></li>
