--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ margin:40px;
 	  <h2>Follow me elsewhere</h2>
 	  <ul>
 				<li><a href="https://github.com/realjunderwood">GitHub</a></li>
-		  		<li><a href="https://github.com/junderw00d">GitHub (old)</a></li>
+		  		<li><a href="https://github.com/junderw00d">GitHub (old account)</a></li>
 
 		  		<li><a href="https://www.goodreads.com/user/show/153388050-j-u">Goodreads</a></li>
 
