--- a/addtocalendar.html
+++ b/addtocalendar.html
@@ -26,7 +26,7 @@
                              "DTSTAMP:20230921T093000Z\n" +
                              "DTSTART:20230921T093000Z\n" +
                              "DTEND:20230921T103000Z\n" +
-                             "SUMMARY:Sample Event\n" +
+                             "SUMMARY:DOC fake trip\n" +
                              "END:VEVENT\n" +
                              "END:VCALENDAR";
 
