--- a/addtocalendar.html
+++ b/addtocalendar.html
@@ -39,7 +39,7 @@
             // Create a link element and trigger the download
             var a = document.createElement('a');
             a.href = url;
-            a.download = 'event.ics';
+            a.download = 'doc.ics';
             a.click();
 
             // Clean up the temporary URL
