--- a/addtocalendar.html
+++ b/addtocalendar.html
@@ -12,9 +12,7 @@
 
         datsplit = dat.split(" - ");
         
-        left = datsplit[0].split(", ")[1].split(" @ ");
-        leftdate = left[0];
-        lefttime = left[1];
+        left = datsplit[0].split(", ")[1].replace(" @","/2023")
         
         document.getElementById('addToCalendarButton').addEventListener('click', function() {
             // Generate the .ics content dynamically (replace with your data)
