--- a/addtocalendar.html
+++ b/addtocalendar.html
@@ -16,7 +16,7 @@
 
 
 
-        const event = new Date(left);
+        const event = new Date(left + " EST");
     console.log(event.toString());
 // Expected output: "Wed Oct 05 2011 16:48:00 GMT+0200 (CEST)"
 // Note: your timezone may vary
