--- a/addtocalendar.html
+++ b/addtocalendar.html
@@ -21,7 +21,7 @@
 // Expected output: "Wed Oct 05 2011 16:48:00 GMT+0200 (CEST)"
 // Note: your timezone may vary
 
-console.log(event.toISOString());
+start = event.toISOString();
 
 
 
