--- a/addtocalendar.html
+++ b/addtocalendar.html
@@ -33,8 +33,8 @@ start = event.toISOString();
                              "PRODID:-//My Calendar//EN\n" +
                              "BEGIN:VEVENT\n" +
                              "UID:123456\n" +
-                             "DTSTAMP:20230921T093000Z\n" +
-                             "DTSTART:20230921T093000Z\n" +
+                             "DTSTAMP:" + start + "\n"
+                             "DTSTART:" + start + "\n"
                              "DTEND:20230921T103000Z\n" +
                              "SUMMARY:DOC fake trip\n" +
                              "END:VEVENT\n" +
