--- a/index.html
+++ b/index.html
@@ -121,9 +121,22 @@ margin:40px;
 </li>
 		<li><a href="/codenames.html">Finding Codenames Clues using NLP</a></li>
 
+
+
+
+<li>
+						<a href="notary.html">Ohio notary public disciplinary process infographic</a>
+						<span class="smoldate">August 2022</span>
+					</li>
+
+		
 		<li><a href="/autoannouncer">AutoAnnouncer</a>
 		<span class="smoldate">Summer 2022</span>
 		</li>
+
+
+
+		
 <li>
 						<a href="/yost/index.html">Making the Journalistic Sausage: A Case Study of an NY Times Op-Ed</a>
 						<span class="smoldate">3/13/2022</span>
