--- a/notary.html
+++ b/notary.html
@@ -1,3 +1,17 @@
-<p>Ohio notary law is really cool. I put together this flowchart depicting the disciplinary process for an Ohio notary public accused of notarial misconduct. It is based on <a href="https://codes.ohio.gov/ohio-administrative-code/rule-111:6-1-07">Ohio Admin. Code § 111:6-1-07</a>.</p>
+<html>
+  <head>
+    <style>
+      #container {
+        padding-left:100px;
+        padding-right:100px;
+      }
+    </style>
+  </head>
+<body>
+  <div id="container">
+<h2>Ohio notary law is really cool. I put together this flowchart depicting the disciplinary process for an Ohio notary public accused of notarial misconduct. It is based on <a href="https://codes.ohio.gov/ohio-administrative-code/rule-111:6-1-07">Ohio Admin. Code § 111:6-1-07</a>.</h2>
 <img src="notaryinfographic.png" style="width:100%">
 <small>Aug. 2022</small>
+  </div>
+</body>
+</html>
