--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ margin:40px;
   <div id="maincontainer">
 <h1 id="hpageWelcome">Welcome! :]</h1>
     <h2 id="intrograph" style="font-weight:300">I'm a freshman at Dartmouth College studying computer science. I'm also interested in cognitive science, public affairs, law, linguistics, and journalism.</h2>
-<!--<figure>
-  <img src="rollup.JPG" width="128px">
-  <figcaption>&ShortUpArrow; Eating a fruit roll-up</figcaption>
-</figure>-->
+<figure>
+  <img src="/assets/2023headshot.JPG" width="196px">
+  <figcaption>&ShortUpArrow; At the base of New Hampshire's <a href="https://en.wikipedia.org/wiki/Mount_Moosilauke">Mt. Moussilauke</a></figcaption>
+</figure>
 
 	  <hr>
     <h2>Recent work</h2>
