--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@ margin:40px;
 		  border-radius:25px;
 		  border:2px solid black;
 	  }
+
+	  #headerr {
+display: flex;
+  flex-wrap: wrap;
+	  }
+
+	  .headerr-item {
+		  flex: 1;
+  margin: 5px;
+	  }
   </style>
 
   
@@ -98,13 +108,20 @@ margin:40px;
     <script src="jquery-3.6.0.min.js"></script>
 	<div id="framecont">
   <div id="maincontainer">
+
+	  <div id="headerr">
+		  <div class="headerr-item">
 <h1 id="hpageWelcome">Welcome! :]</h1>
     <h2 id="intrograph" style="font-weight:300">I'm a freshman at Dartmouth College studying computer science. I'm also interested in cognitive science, public affairs, law, linguistics, and journalism.</h2>
-<figure>
+		  </div>
+		  <div class="headerr-item">
+			  <figure>
   <img src="/assets/2023headshot.JPG" width="196px">
   <figcaption>&ShortUpArrow; At the base of New Hampshire's <a href="https://en.wikipedia.org/wiki/Mount_Moosilauke">Mt. Moussilauke</a></figcaption>
 </figure>
-
+		  </div>
+  </div>
+	  
 	  <hr>
     <h2>Recent work</h2>
 	<ul>
