--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ display: flex;
 		  </div>
 		  <div class="headerr-item">
 			  <figure>
-  <img src="/assets/2023headshot.JPG" width="196px">
+  <img src="/assets/2023headshotCropped.JPG" width="196px">
   <figcaption>&ShortUpArrow; At the base of New Hampshire's <a href="https://en.wikipedia.org/wiki/Mount_Moosilauke">Mt. Moussilauke</a></figcaption>
 </figure>
 		  </div>
