--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ font-size:4em;
     }
 	  #intrograph {
     display:inline-block;
-	    width:72%;
+	   /* width:72%; */
 	    vertical-align:top;
 	  }
     #maincontainer {
