--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ display: flex;
 		  </div>
 		  <div class="headerr-item">
 			  <figure>
-  <img src="/assets/2023headshotCropped.jpg" width="196px">
-  <figcaption>&ShortUpArrow; At the base of New Hampshire's <a href="https://en.wikipedia.org/wiki/Mount_Moosilauke">Mt. Moussilauke</a></figcaption>
+  <img src="/assets/2023headshotCropped.jpg" width="256px">
+  <figcaption width="256px">&ShortUpArrow; At the base of New Hampshire's <a href="https://en.wikipedia.org/wiki/Mount_Moosilauke">Mt. Moussilauke</a></figcaption>
 </figure>
 		  </div>
   </div>
