--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ display: flex;
 		  </div>
 		  <div class="headerr-item">
 			  <figure>
-  <img src="/assets/2023headshotCropped.jpg" width="256px">
+  <img src="/assets/2023headshotCropped.jpg" style="width:256px">
   <figcaption width="256px">&ShortUpArrow; At the base of New Hampshire's <a href="https://en.wikipedia.org/wiki/Mount_Moosilauke">Mt. Moussilauke</a></figcaption>
 </figure>
 		  </div>
