--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
 	<title>James Underwood Dot Net</title>
 	<link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">
