--- a/index.html
+++ b/index.html
@@ -99,8 +99,13 @@ display: flex;
 	  }
 
 	  .headerr-item {
-		  flex: 1;
   margin: 5px;
+	  }
+	  #headerr-item1 {
+		flex:2
+	  }
+	  #headerr-item2 {
+		flex:1
 	  }
   </style>
 
@@ -113,11 +118,11 @@ display: flex;
   <div id="maincontainer">
 
 	  <div id="headerr">
-		  <div class="headerr-item">
+		  <div class="headerr-item" id="headerr-item1">
 <h1 id="hpageWelcome">Welcome! :]</h1>
     <h2 id="intrograph" style="font-weight:300">I'm a freshman at Dartmouth College studying computer science. I'm also interested in cognitive science, human-centered design, public affairs, law, linguistics, and journalism.</h2>
 		  </div>
-		  <div class="headerr-item">
+		  <div class="headerr-item" id="headerr-item2">
 			  <figure>
   <img src="/assets/2023headshotCropped.jpg" style="width:256px">
   <figcaption width="256px">&ShortUpArrow; At the base of New Hampshire's <a href="https://en.wikipedia.org/wiki/Mount_Moosilauke">Mt. Moussilauke</a></figcaption>
