--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ display: flex;
 		  </div>
 		  <div class="headerr-item" id="headerr-item2">
 			  <figure>
-  <img src="/assets/2023headshotCropped.jpg" style="width:256px">
-  <figcaption width="256px">&ShortUpArrow; At the base of New Hampshire's <a href="https://en.wikipedia.org/wiki/Mount_Moosilauke">Mt. Moussilauke</a></figcaption>
+  <img src="/assets/2023headshotCropped.jpg" width="256px">
+  <figcaption style="width:256px">&ShortUpArrow; At the base of New Hampshire's <a href="https://en.wikipedia.org/wiki/Mount_Moosilauke">Mt. Moussilauke</a></figcaption>
 </figure>
 		  </div>
   </div>
