--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@ display: flex;
 <body>
 
     <script src="jquery-3.6.0.min.js"></script>
+
+<div style="position:absolute;left:0">
+<p style="display:block;font-size:12px;margin-left:6px;">beige</p>
+</div>
+	
+	
 	<div id="framecont">
   <div id="maincontainer">
 
