--- a/index.html
+++ b/index.html
@@ -115,8 +115,9 @@ display: flex;
 
     <script src="jquery-3.6.0.min.js"></script>
 
-<div style="position:absolute;left:0">
-<p style="display:block;font-size:12px;margin-left:6px;">beige</p>
+<div style="position:absolute;left:0;top: 60px;">
+<span style="display:block;font-size:12px;margin-left:16px;position: absolute;">beige</span>
+  <span style="margin-left: 55px;/*! font-size: 12px; *//*! position: absolute; */display: block;font-size: 12px;/*! margin-left: 6px; */position: absolute;">white</span>
 </div>
 	
 	
