--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ display: flex;
 <div style="position:absolute;left:0;top: 60px;">
 <span style="display:block;font-size:12px;margin-left:16px;position: absolute;">beige</span>
   <span style="margin-left: 55px;/*! font-size: 12px; *//*! position: absolute; */display: block;font-size: 12px;/*! margin-left: 6px; */position: absolute;">white</span>
+  <div style="/*! width:25px; */margin-top: 30px;/*! transform: rotate(-45deg); */margin-left: 47.5px;"><span style="margin-left: 55px;font-size: 12px;position: absolute;display: block;font-size: 12px;margin-left: 10px;position: absolute;top: 15px;">black</span><hr style="transform: rotate(-45deg);width: 10px;/*! margin-top: 25px; */"></div>
 </div>
 	
 	
