--- a/cobep-master/index.html
+++ b/cobep-master/index.html
@@ -71,7 +71,7 @@
 							<h3>get started</h3>
 							 <div class="row justify-content-center">
             							  <div class="col-auto">
-              								  <p><a class="btn btn-primary btn-lg" href="/lend" role="button">contribute books&nbsp;&nbsp;</a> </p>
+              								  <p><a class="btn btn-primary btn-lg" href="/cobep-master/lend" role="button">contribute books&nbsp;&nbsp;</a> </p>
       							 	   </div> 
          				   		</div>
 	  				   		<div class="row justify-content-center">
