--- a/cobep-master/lend/index.html
+++ b/cobep-master/lend/index.html
@@ -23,10 +23,10 @@
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/lend">Lend</a>
+            <a class="nav-link" href="/cobep-master/lend">Lend</a>
           </li>
          <li class="nav-item">
-            <a class="nav-link" href="/borrow">Borrow</a>
+            <a class="nav-link" href="/cobep-master/borrow">Borrow</a>
           </li>
        
         </ul>
