--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<title>James Underwood Dot Net</title>
 	<link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">
   <style>
+
+	  h2:not(#intrograph) {
+		letter-spacing:-1.5px
+	  }
 hr {
         border:1px solid black;
 }
