--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
 	<title>James Underwood Dot Net</title>
-	<link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">
+	<!--<link href="https://fonts.cdnfonts.com/css/century-schoolbook" rel="stylesheet">-->
   <style>
-
+@font-face{font-family:century schoolbook;font-style:normal;font-weight:400;src:local('Century Schoolbook'),url(https://fonts.cdnfonts.com/s/56680/SCHLBKB.woff) format('woff')}
 	  h2:not(#intrograph) {
 		letter-spacing:-1.5px
 	  }
