--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ display: flex;
 	  <div id="headerr">
 		  <div class="headerr-item" id="headerr-item1">
 <h1 id="hpageWelcome">Welcome! :]</h1>
-    <h2 id="intrograph" style="font-weight:300">I'm a freshman at Dartmouth College studying computer science. I'm also interested in cognitive science, human-centered design, public affairs, law, linguistics, and journalism.</h2>
+    <h2 id="intrograph" style="font-weight:300">I'm a freshman at Dartmouth College studying computer science. Some of my interests include AI alignment, effective altruism, cognitive science, human-centered design, public affairs, law, linguistics, and journalism.</h2>
 		  </div>
 		  <div class="headerr-item" id="headerr-item2">
 			  <figure>
