--- a/vote/index.html
+++ b/vote/index.html
@@ -4,12 +4,16 @@
   body {
     background:rgb(0,105,62)
   }
+  #fwhs {
+    letter-spacing:-0.5px
+  }
 </style>
   
 </head>
 <body>
   <div id="nameplate">
-<img src="junameplate.png">
+<img src="junameplate.png" width="100px">
+    <span id="fwhs">for West House senator</span>
   </div>
   
 </body>
