--- a/vote/index.html
+++ b/vote/index.html
@@ -1,11 +1,15 @@
 <html>
 <head>
+  <link rel="stylesheet" href="https://use.typekit.net/qsd7uud.css">
 <style>
   body {
     background:rgb(0,105,62)
   }
   #fwhs {
     letter-spacing:-0.5px
+    font-family: "clarendon-urw", serif;
+font-weight: 300;
+font-style: normal;
   }
 </style>
   
