--- a/vote/index.html
+++ b/vote/index.html
@@ -10,13 +10,14 @@
     font-family: "clarendon-urw", serif;
 font-weight: 300;
 font-style: normal;
+    color:white;
   }
 </style>
   
 </head>
 <body>
   <div id="nameplate">
-<img src="junameplate.png" width="100px">
+<img src="junameplate.png" width="300px">
     <span id="fwhs">for West House senator</span>
   </div>
   
