--- a/vote/index.html
+++ b/vote/index.html
@@ -6,7 +6,8 @@
     background:rgb(0,105,62)
   }
   #fwhs {
-    letter-spacing:-0.5px;
+    letter-spacing:-0.72px;
+    font-size:2.5em;
     font-family: "clarendon-urw", serif;
 font-weight: 300;
 font-style: normal;
