--- a/vote/index.html
+++ b/vote/index.html
@@ -3,7 +3,12 @@
   <link rel="stylesheet" href="https://use.typekit.net/qsd7uud.css">
 <style>
   body {
-    background:rgb(0,105,62)
+    background:white;
+    padding:60px;
+  }
+  #maindiv {
+    background:rgb(0,105,62);
+    border-radius:30px;
   }
   #fwhs {
     letter-spacing:-0.72px;
@@ -17,9 +22,11 @@ font-style: normal;
   
 </head>
 <body>
+  <div id="maindiv">
   <div id="nameplate">
 <img src="junameplate.png" width="300px">
     <span id="fwhs">for West House senator</span>
+  </div>
   </div>
   
 </body>
