--- a/vote/index.html
+++ b/vote/index.html
@@ -27,6 +27,8 @@ font-style: normal;
 <img src="junameplate.png" width="300px">
     <span id="fwhs">for West House senator</span>
   </div>
+<p>My fellow Westians,</p>
+    
   </div>
   
 </body>
