--- a/vote/index.html
+++ b/vote/index.html
@@ -9,6 +9,8 @@
   #maindiv {
     background:rgb(0,105,62);
     border-radius:30px;
+    margin-left:8%;
+    margin-right:8%;
   }
   #fwhs {
     letter-spacing:-0.72px;
