--- a/vote/index.html
+++ b/vote/index.html
@@ -12,7 +12,8 @@
   #maindiv {
     background:rgb(0,105,62);
     border-radius:30px;
-
+    padding-left:8%;
+    padding-right:8%;
   }
   #fwhs {
     letter-spacing:-0.9px;
@@ -25,6 +26,12 @@ font-style: normal;
   #nameplate {
 text-align:center;
   }
+
+  #letter {
+        font-family: "clarendon-urw", serif;
+font-weight: 400;
+font-style: normal;
+  }
 </style>
   
 </head>
@@ -34,8 +41,10 @@ text-align:center;
 <img src="junameplate.png" width="300px">
     <span id="fwhs">for West House senator</span>
   </div>
+    <div id="letter">
 <p>My fellow Westians,</p>
-    
+      
+    </div>
   </div>
   
 </body>
