--- a/vote/index.html
+++ b/vote/index.html
@@ -16,7 +16,7 @@
     padding-right:8%;
   }
   #fwhs {
-    letter-spacing:-0.9px;
+    letter-spacing:-1.5px;
     font-size:2.5em;
     font-family: "clarendon-urw", serif;
 font-weight: 300;
@@ -31,6 +31,7 @@ text-align:center;
         font-family: "clarendon-urw", serif;
 font-weight: 400;
 font-style: normal;
+    color:white;
   }
 </style>
   
