--- a/vote/index.html
+++ b/vote/index.html
@@ -14,6 +14,7 @@
     border-radius:30px;
     padding-left:8%;
     padding-right:8%;
+    height:100%;
   }
   #fwhs {
     letter-spacing:-1.5px;
