--- a/vote/index.html
+++ b/vote/index.html
@@ -34,6 +34,25 @@ font-weight: 300;
 font-style: normal;
     color:white;
   }
+
+
+
+.tile-container {
+    display: flex;
+    flex-wrap: wrap; /* Allow tiles to wrap to the next line */
+    justify-content: space-between; /* Distribute tiles evenly */
+    padding: 20px;
+}
+
+.tile {
+    flex: 0 1 calc(50% - 20px); /* Two tiles per row, with spacing */
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+}
+  
 </style>
   
 </head>
@@ -45,6 +64,15 @@ font-style: normal;
   </div>
     <div id="letter">
 <p>My fellow Westians,</p>
+
+<h2>My platform</h2>
+          <div class="tile-container">
+        <div class="tile">Aspect 1</div>
+        <div class="tile">Aspect 2</div>
+        <div class="tile">Aspect 3</div>
+        <div class="tile">Aspect 4</div>
+    </div>
+
       
     </div>
   </div>
