--- a/vote/index.html
+++ b/vote/index.html
@@ -67,10 +67,10 @@ font-style: normal;
 
 <h2>My platform</h2>
           <div class="tile-container">
-        <div class="tile">Aspect 1</div>
-        <div class="tile">Aspect 2</div>
-        <div class="tile">Aspect 3</div>
-        <div class="tile">Aspect 4</div>
+        <div class="tile">Make Dartmouth a leader in climate adaptation.</div>
+        <div class="tile">Expand equitability and access</div>
+        <div class="tile">Defend free speech</div>
+        <div class="tile">Serve the students, always</div>
     </div>
 
       
