--- a/vote/index.html
+++ b/vote/index.html
@@ -46,7 +46,7 @@ font-style: normal;
 
 .tile {
     flex: 0 1 calc(30% - 20px); /* Two tiles per row, with spacing */
-    background-color: #f0f0f0;
+    background-color: rgb(18,49,43);
     border: 1px solid #ccc;
     padding: 20px;
     margin: 10px;
