--- a/vote/index.html
+++ b/vote/index.html
@@ -40,7 +40,7 @@ font-style: normal;
 .tile-container {
     display: flex;
     flex-wrap: wrap; /* Allow tiles to wrap to the next line */
-    justify-content: space-between; /* Distribute tiles evenly */
+    justify-content: center; /* Distribute tiles evenly */
     padding: 20px;
 }
 
