--- a/vote/index.html
+++ b/vote/index.html
@@ -52,6 +52,10 @@ font-style: normal;
     margin: 10px;
     text-align: center;
 }
+  #hIiMjAmEs {
+    font-size: 3em;
+    font-family:"Helvetica"
+  }
   
 </style>
   
@@ -64,7 +68,9 @@ font-style: normal;
   </div>
     <div id="letter">
 <p>My fellow Westians,</p>
+<h1 id="hIiMjAmEs">Hi, I'm James</h1>
 
+  
 <h2>My platform</h2>
           <div class="tile-container">
         <div class="tile">Make Dartmouth a leader in climate adaptation.</div>
