--- a/vote/index.html
+++ b/vote/index.html
@@ -63,13 +63,13 @@ font-style: normal;
 <body>
   <div id="maindiv">
   <div id="nameplate">
-<img src="junameplate.png" width="300px">
+<img src="junameplate.png" width="150px">
     <span id="fwhs">for West House senator</span>
   </div>
     <div id="letter">
 <p>My fellow Westians,</p>
-<h1 id="hIiMjAmEs">Hi, I'm James</h1>
-
+<h1 id="hIiMjAmEs">Hi, I'm James.</h1>
+<h2>I'm a CS major from Columbus, Ohio, asking for your vote for Dartmouth Student Government's class of 2027 West House seat. I'm running because I love Dartmouth and want to make it an even better institution.</h2>
   
 <h2>My platform</h2>
           <div class="tile-container">
