--- a/vote/index.html
+++ b/vote/index.html
@@ -56,7 +56,9 @@ font-style: normal;
     font-size: 3em;
     font-family:"Helvetica"
   }
-  
+  #subhij {
+    font-weight:300;
+  }
 </style>
   
 </head>
@@ -69,7 +71,7 @@ font-style: normal;
     <div id="letter">
 <p>My fellow Westians,</p>
 <h1 id="hIiMjAmEs">Hi, I'm James.</h1>
-<h2>I'm a CS major from Columbus, Ohio, asking for your vote for Dartmouth Student Government's class of 2027 West House seat. I'm running because I love Dartmouth and want to make it an even better institution.</h2>
+<h2 id="subhij">I'm a CS major from Columbus, Ohio, asking for your vote for Dartmouth Student Government's class of 2027 West House seat. I'm running because I love Dartmouth and want to make it an even better institution.</h2>
   
 <h2>My platform</h2>
           <div class="tile-container">
