--- a/vote/index.html
+++ b/vote/index.html
@@ -55,9 +55,11 @@ font-style: normal;
   #hIiMjAmEs {
     font-size: 3em;
     font-family:"Helvetica"
+    width: calc(100% - 200px);
   }
   #subhij {
     font-weight:300;
+    width: calc(100% - 200px);
   }
 </style>
   
@@ -69,7 +71,9 @@ font-style: normal;
     <span id="fwhs">for West House senator</span>
   </div>
     <div id="letter">
-<p>My fellow Westians,</p>
+
+<img src="idmug.jpeg" style="position: absolute;right: 70px;transform: rotate(5deg);border: 2px solid black;top: 100px;box-shadow: 10px 10px rgb(18,49,43);" width="200px">
+      
 <h1 id="hIiMjAmEs">Hi, I'm James.</h1>
 <h2 id="subhij">I'm a CS major from Columbus, Ohio, asking for your vote for Dartmouth Student Government's class of 2027 West House seat. I'm running because I love Dartmouth and want to make it an even better institution.</h2>
   
