--- a/vote/index.html
+++ b/vote/index.html
@@ -54,7 +54,7 @@ font-style: normal;
 }
   #hIiMjAmEs {
     font-size: 3em;
-    font-family:"Helvetica"
+    font-family:"Helvetica";
     width: calc(100% - 200px);
   }
   #subhij {
