--- a/vote/index.html
+++ b/vote/index.html
@@ -17,12 +17,15 @@
     height:100%;
   }
   #fwhs {
-    letter-spacing:-2px;
-    font-size:1em;
+    letter-spacing:-1.5px;
+    font-size:1.3em;
     font-family: "clarendon-urw", serif;
 font-weight: 300;
 font-style: normal;
     color:white;
+    vertical-align:top;
+    top:10px;
+    position:relative;
   }
   #nameplate {
 text-align:center;
