--- a/dcarb-verify/index.html
+++ b/dcarb-verify/index.html
@@ -167,6 +167,11 @@ console.log("update ran");
     console.error("Error getting users:", error);
   });
 
+
+document.getElementsByTagName("img")[0].src = "food.jpg";
+document.getElementsByTagName("img")[0].src = "dartmouthcoach.jpg";
+
+	
 }
 
 
