--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+
 <html>
-<head>
+<p>fsd</p>
+	<head>
 	
 <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
