--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@ display: flex;
 	  <hr>
     <h2>Recent work</h2>
 	<ul>
+		<li><a href="/cgolpython">Conway's Game of Life in Python</a>
+		<span class="smoldate">Oct. 2023</span>
+		</li>
 		<li><a href="https://github.com/OSU-Bee-Lab/BuzzDetect">BuzzDetect (OSU Bee Lab)</a>
 		<span class="smoldate">Summer 2023</span>
 		</li>
