--- a/cgolpython/index.html
+++ b/cgolpython/index.html
@@ -10,7 +10,8 @@ margin-right:10%;
 </head>
 <body>
 <h1>Conway's Game of Life in Python</h1>
-
+<h2>This is an implementation of Conway's Game of Life that I created for my CS1 class.</h2>
+  <br>
 <pre>
 This is a Python implementation of Conway's Game of Life (CGOL). CGOL
 consists of a grid of cells that are either "alive" or "dead." In each
