--- a/cgolpython/index.html
+++ b/cgolpython/index.html
@@ -9,6 +9,7 @@ margin-right:10%;
 </style>
 </head>
 <body>
+  <a href="/">< return to jamesunderwood.net</a>
 <h1>Conway's Game of Life in Python</h1>
 <h2>This is an implementation of Conway's Game of Life that I created for my CS1 class.</h2>
   <br>
