--- a/cgolpython/index.html
+++ b/cgolpython/index.html
@@ -50,12 +50,12 @@ Conway's_Game_of_Life
 
 </pre>
 
-   <video width="320" height="240" controls>
-  <source src="Demo1.mov" type="video/mov">
+   <video width="320" autoplay loop>
+  <source src="Demo1.mov" type="video/mp4">
 Your browser does not support the video tag.
 </video> 
-<video width="320" height="240" controls>
-  <source src="Demo2.mov" type="video/mov">
+<video width="320" autoplay loop>
+  <source src="Demo2.mov" type="video/mp4">
 Your browser does not support the video tag.
 </video> 
   
