--- a/cgolpython/index.html
+++ b/cgolpython/index.html
@@ -12,9 +12,7 @@ margin-right:10%;
   <a href="/">< return to jamesunderwood.net</a>
 <h1>Conway's Game of Life in Python</h1>
 <h2>This is an implementation of Conway's Game of Life that I created for my CS1 class.</h2>
-  <br>
-<pre>
-This is a Python implementation of Conway's Game of Life (CGOL). CGOL
+<pre>This is a Python implementation of Conway's Game of Life (CGOL). CGOL
 consists of a grid of cells that are either "alive" or "dead." In each
 iteration of the game, called a generation, specific rules govern
 whether a cell will be alive or dead based on its neighbors (the eight
