--- a/cgolpython/index.html
+++ b/cgolpython/index.html
@@ -5,10 +5,14 @@ body {
 margin-left:10%;
 margin-right:10%;
 }
+  #videodiv {
+position:absolute;
+  }
 
 </style>
 </head>
 <body>
+  <div id="maindiv">
   <a href="/">< return to jamesunderwood.net</a>
 <h1>Conway's Game of Life in Python</h1>
 <h2>This is an implementation of Conway's Game of Life that I created for my CS1 class.</h2>
@@ -47,6 +51,8 @@ More about Conway's Game of Life: https://en.wikipedia.org/wiki/
 Conway's_Game_of_Life
 
 </pre>
+  </div>
+    <div id="videodiv">
 
    <video width="320" autoplay loop>
   <source src="Demo1.mov" type="video/mp4">
@@ -56,7 +62,7 @@ Your browser does not support the video tag.
   <source src="Demo2.mov" type="video/mp4">
 Your browser does not support the video tag.
 </video> 
-  
+    </div>
 
 </body>
 
