--- a/cgolpython/index.html
+++ b/cgolpython/index.html
@@ -51,6 +51,8 @@ More about Conway's Game of Life: https://en.wikipedia.org/wiki/
 Conway's_Game_of_Life
 
 </pre>
+
+    <strong><a href="https://github.com/realjunderwood/cgolpython">Browse the source code</a></strong>
   </div>
     <div id="videodiv">
 
