--- a/cgolpython/index.html
+++ b/cgolpython/index.html
@@ -7,7 +7,10 @@ margin-right:10%;
 }
   #videodiv {
 position:absolute;
+  right: 0;
+  top: 0;
   }
+  
 
 </style>
 </head>
@@ -60,6 +63,7 @@ Conway's_Game_of_Life
   <source src="Demo1.mov" type="video/mp4">
 Your browser does not support the video tag.
 </video> 
+      <br>
 <video width="320" autoplay loop>
   <source src="Demo2.mov" type="video/mp4">
 Your browser does not support the video tag.
