--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -38,6 +38,9 @@ color:black;;
   #formTable {
     width:100%;
   }
+  #headerh1 {
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  }
 </style>
 
   
@@ -46,7 +49,7 @@ color:black;;
 
 <body>
 <div id="headerDiv">
-  <h1>Codenames Cluefinder</h1>
+  <h1 id="headerh1">Codenames Cluefinder</h1>
 </div>
   <div id="contentDiv">
     <table id="formTable">
