--- a/codenamesfront.html
+++ b/codenamesfront.html
@@ -50,6 +50,7 @@ color:black;;
 <body>
 <div id="headerDiv">
   <h1 id="headerh1">Codenames Cluefinder</h1>
+  <h4>Not affiliated with Codenames or Vladimír Chvátil</h4>
 </div>
   <div id="contentDiv">
     <table id="formTable">
